# AdventOfCode2023

./: AdventOfCode2023.cabal  Main.hs
lib/IO/: AdventOfCode.hs
solutions/: Day1.hs  Day2.hs  Day3.hs  Main.hs
