cabal-version:      2.4
name:               AdventOfCode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Br3akp01nt
maintainer:         br3akp01nt@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable AdventOfCode2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Day1,
                   Day2

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      lib,
                      lens ^>=5.2.3,
                      parsec
    hs-source-dirs:   solutions
    default-language: Haskell2010

library lib
    hs-source-dirs: lib
    exposed-modules: IO.AdventOfCode
    build-depends:    base ^>=4.16.4.0,

